# morrowind_alchemy_tool

./: Cargo.toml  README.md  config.yaml  index.html  morrowind_alchemy_tool.js  morrowind_alchemy_tool_bg.wasm
assets/: manifest.json  sw.js
res/: Morrowind Base Game Ingredients.yaml  Morrowind Bloodmoon Ingredients.yaml  Morrowind Tribunal Ingredients.yaml
src/: ingredient.rs  main.rs  morrowind_base_game_ingredients.rs  morrowind_bloodmoon_ingredients.rs  morrowind_tribunal_ingredients.rs  potion.rs  tests.rs
