[package]
name = "morrowind_alchemy_tool"
authors = ["Aaron Tabor"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { version = "0.24.1", features = ["derive"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_yaml = "0.9.13"
itertools = "0.10.5"
lazy_static = "1.4.0"
strum_macros = "0.24.1"
egui = "0.19.0"
eframe = { version = "0.19.0", features = ["persistence"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
log = "0.4.6"
wasm-logger = "0.2.0"


[profile.release]
opt-level = 2 # fast and small wasm
